- implementazione SettingsActivity - miglioramento layout activity_menu e activity_settings - aggiunta nuove stringhe in strings.xml con relative traduzioni - modifica dell'android manifest per la scelta del tema - reperimento sistema di controllo in Game dal config.txt

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,18 +7,20 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="371dp"
+        android:layout_height="365dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="66dp"
-        tools:layout_editor_absoluteY="43dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView_menu"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:fontFamily="@font/play_prented"
             android:layout_marginBottom="48dp"
+            android:fontFamily="@font/play_prented"
             android:text="@string/menu_principale"
             android:textAlignment="center" />
 
