--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,34 +7,34 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="373dp"
+        android:layout_height="279dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.572"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.435">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="start"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="349dp"
-                android:layout_height="30dp"
+                android:id="@+id/textViewSetLanguage"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/play_prented"
                 android:text="@string/imposta_lingua"
-                android:textAlignment="textStart" />
+                android:textAlignment="gravity" />
 
             <RadioGroup
                 android:id="@+id/groupLanguage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="252dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -64,9 +64,9 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textViewSetControlSystem"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="29dp"
             android:fontFamily="@font/play_prented"
             android:text="@string/imposta_sistema_di_controllo"
             android:textAlignment="center" />
@@ -77,7 +77,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textViewSlider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -86,7 +86,7 @@
                 android:textAlignment="center" />
 
             <Switch
-                android:id="@+id/switchControl"
+                android:id="@+id/switchControlGame"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:checked="false"
@@ -94,12 +94,53 @@
                 tools:checked="false" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textViewSensor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:fontFamily="@font/play_prented"
                 android:text="@string/muovi_il_telefono"
+                android:textAlignment="center" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:fontFamily="@font/play_prented"
+            android:text="@string/imposta_esistenza_audio"
+            android:textAlignment="center" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewDeactivate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/play_prented"
+                android:text="@string/audio_off"
+                android:textAlignment="center" />
+
+            <Switch
+                android:id="@+id/switchControlAudio"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:checked="false"
+                android:showText="false"
+                tools:checked="false" />
+
+            <TextView
+                android:id="@+id/textViewActivate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/play_prented"
+                android:text="@string/audio_on"
                 android:textAlignment="center" />
 
         </LinearLayout>
@@ -112,4 +153,5 @@
             android:text="@string/salva" />
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
