--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="153dp"
             android:layout_marginTop="50dp"
-            android:fontFamily="@font/play_prented"
+            android:fontFamily="@font/font"
             android:text="Arkanoid"
             android:textAlignment="center"
             android:textColor="@android:color/secondary_text_dark"
@@ -35,7 +35,7 @@
             android:id="@+id/developed"
             android:layout_width="match_parent"
             android:layout_height="37dp"
-            android:fontFamily="@font/play_prented"
+            android:fontFamily="@font/font"
             android:text="@string/developed"
             android:textAlignment="center"
             android:textColor="@android:color/secondary_text_dark"
@@ -45,7 +45,7 @@
             android:id="@+id/credits"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/play_prented"
+            android:fontFamily="@font/font"
             android:text="Luca Ciscutti\nDavide Bancone\nDomenico Laiso\nJavier Diaz"
             android:textAlignment="center"
             android:textColor="@android:color/secondary_text_dark"
