--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:fontFamily="@font/play_prented"
+                android:fontFamily="@font/font"
                 android:text="@string/imposta_lingua"
                 android:textAlignment="gravity" />
 
@@ -42,21 +42,21 @@
                     android:id="@+id/radioEsp"
                     android:layout_width="73dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/play_prented"
+                    android:fontFamily="@font/font"
                     android:text="@string/esp" />
 
                 <RadioButton
                     android:id="@+id/radioIta"
                     android:layout_width="74dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/play_prented"
+                    android:fontFamily="@font/font"
                     android:text="@string/ita" />
 
                 <RadioButton
                     android:id="@+id/radioEng"
                     android:layout_width="81dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/play_prented"
+                    android:fontFamily="@font/font"
                     android:text="@string/eng" />
 
             </RadioGroup>
@@ -67,7 +67,7 @@
             android:id="@+id/textViewSetControlSystem"
             android:layout_width="match_parent"
             android:layout_height="29dp"
-            android:fontFamily="@font/play_prented"
+            android:fontFamily="@font/font"
             android:text="@string/imposta_sistema_di_controllo"
             android:textAlignment="center" />
 
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/play_prented"
+                android:fontFamily="@font/font"
                 android:text="@string/scorri_con_il_dito"
                 android:textAlignment="center" />
 
@@ -98,7 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/play_prented"
+                android:fontFamily="@font/font"
                 android:text="@string/muovi_il_telefono"
                 android:textAlignment="center" />
 
@@ -108,7 +108,7 @@
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="23dp"
-            android:fontFamily="@font/play_prented"
+            android:fontFamily="@font/font"
             android:text="@string/imposta_esistenza_audio"
             android:textAlignment="center" />
 
@@ -122,7 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/play_prented"
+                android:fontFamily="@font/font"
                 android:text="@string/audio_off"
                 android:textAlignment="center" />
 
@@ -139,7 +139,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:fontFamily="@font/play_prented"
+                android:fontFamily="@font/font"
                 android:text="@string/audio_on"
                 android:textAlignment="center" />
 
@@ -149,7 +149,7 @@
             android:id="@+id/button_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/play_prented"
+            android:fontFamily="@font/font"
             android:text="@string/salva" />
 
     </LinearLayout>
