--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -38,14 +38,14 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="371dp"
-        android:layout_height="365dp"
+        android:layout_width="409dp"
+        android:layout_height="263dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.885">
+        app:layout_constraintVertical_bias="0.838">
 
         <TextView
             android:id="@+id/textView_menu"
@@ -87,12 +87,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="223dp"
-        android:layout_height="142dp"
+        android:layout_width="239dp"
+        android:layout_height="119dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.69">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
