--- a/app/src/main/res/layout/activity_multiplayer.xml
+++ b/app/src/main/res/layout/activity_multiplayer.xml
@@ -4,4 +4,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="231dp"
+        android:layout_height="344dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:text="@string/seleziona_tipologia_partita"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/button_matchmaking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/matchmaking" />
+
+        <Button
+            android:id="@+id/button_private"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/privata" />
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
