--- a/app/src/main/res/layout/room_code_dialog.xml
+++ b/app/src/main/res/layout/room_code_dialog.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="Salva livello"
+                android:text="@string/create_or_join_room"
                 android:textColor="#673AB7"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -46,11 +46,11 @@
 
             <EditText
                 android:id="@+id/editTextCodeRoom"
-                android:layout_width="231dp"
+                android:layout_width="217dp"
                 android:layout_height="39dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
-                android:hint="inserisci nome livello"
+                android:hint="@string/insert_room"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -62,12 +62,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Salva"
+                android:text="@string/create_room_button"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintHorizontal_bias="0.179"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextCodeRoom" />
+                app:layout_constraintTop_toBottomOf="@+id/editTextCodeRoom"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <Button
+                android:id="@+id/buttonJoinRoom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/join_room_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.524"
+                app:layout_constraintStart_toEndOf="@+id/buttonCreateRoom"
+                tools:layout_editor_absoluteY="153dp" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
