--- a/app/src/main/res/layout/activity_actual_game.xml
+++ b/app/src/main/res/layout/activity_actual_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".multiplayer.ActualGameActivity">
+    tools:context=".multiplayer.gameClasses.ActualGameActivity">
 
     <TextView
         android:id="@+id/textView2"
