--- a/app/src/main/res/layout/room_code_dialog.xml
+++ b/app/src/main/res/layout/room_code_dialog.xml
@@ -75,10 +75,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/join_room_button"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.524"
+                app:layout_constraintHorizontal_bias="0.544"
                 app:layout_constraintStart_toEndOf="@+id/buttonCreateRoom"
-                tools:layout_editor_absoluteY="153dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.905" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
