- refactor e incremento traduzioni

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -150,7 +150,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/font"
-            android:text="@string/salva" />
+            android:text="@string/save_label" />
 
     </LinearLayout>
 
