--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,36 +11,37 @@
         android:id="@+id/sign_in_button"
         android:layout_width="188dp"
         android:layout_height="60dp"
+        android:layout_marginTop="104dp"
         app:layout_constraintBottom_toTopOf="@+id/guest_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.702"
+        app:layout_constraintTop_toBottomOf="@+id/arkanTextView"
+        app:layout_constraintVertical_bias="0.217"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/guest_button"
         android:layout_width="188dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="268dp"
         android:text="@string/guest_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.499"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.76" />
 
     <TextView
         android:id="@+id/arkanTextView"
         android:layout_width="221dp"
         android:layout_height="38dp"
-        android:layout_marginTop="32dp"
         android:text="ArkanMusic"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.112" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
