--- a/app/src/main/res/layout/level_save_fragment_dialog.xml
+++ b/app/src/main/res/layout/level_save_fragment_dialog.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="Salva livello"
+                android:text="@string/save_level_dialog"
                 android:textColor="#673AB7"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -50,8 +50,9 @@
                 android:layout_height="39dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
-                android:hint="inserisci nome livello"
+                android:hint="@string/insert_name_level_hint"
                 android:inputType="textPersonName"
+                android:maxLength="13"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textCreateRoom" />
@@ -62,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-                android:text="Salva"
+                android:text="@string/save_label"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.501"
