--- a/app/src/main/res/layout/room_code_dialog.xml
+++ b/app/src/main/res/layout/room_code_dialog.xml
@@ -50,6 +50,7 @@
                 android:layout_height="39dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
+                android:maxLength="10"
                 android:hint="@string/insert_room"
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
