--- a/app/src/main/res/layout/pause_game_dialog.xml
+++ b/app/src/main/res/layout/pause_game_dialog.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="250dp"
+    android:layout_width="350dp"
 
-    android:layout_height="150dp"
+    android:layout_height="300dp"
     android:layout_gravity="center"
     android:visibility="visible">
 
@@ -24,28 +24,29 @@
 
             <ImageButton
                 android:id="@+id/imageButtonResume"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:background="@drawable/ic_play"
+                android:clickable="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.807"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.471"
-                android:background="@drawable/ic_play"
-                android:clickable="true"/>
+                app:layout_constraintVertical_bias="0.821" />
 
             <ImageButton
                 android:id="@+id/imageButtonExitGame"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:layout_marginTop="72dp"
+                android:background="@drawable/ic_exit_game"
+                android:clickable="true"
                 android:rotation="180"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton"
+                app:layout_constraintBottom_toTopOf="@+id/imageButtonResume"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:background="@drawable/ic_exit_game"
-                android:clickable="true"/>
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
